welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:2: error: not found: value num
  for (i<-1 to nums.length-1){if (num(i)==lookingFor) {return i}
                                  ^indexOfValue:2: error: type mismatch;
 found   : Unit
 required: Int
  for (i<-1 to nums.length-1){if (num(i)==lookingFor) {return i}
        ^